    * 4096 avaya_chassis_card, avaya_chassis_ps, avaya_chassis_temp: New checks for Avaya devices...
    * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu
            NOTE: Please refer to the migration notes!
    * 3993 Some minor performance improvements during config generation...
    * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
    * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
    * 3979 FIX: vbox_guest: Only try to fetch VBox state in case the vboxguest module is loaded
    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 3983 FIX: mssql_instance: Be more robust agains missing instance info in case of connection issues
    * 3963 FIX: check_mk_agent.linux: fixed strayed output of postfix status command
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
    * 4043 FIX: Add missing metric definition for 15 minute CPU load prediction'
    * 3751 FIX: jolokia_metrics: Discovery no longer crashes in case of error querying instance
    * 4088 FIX: ntp: fixed incomplete data handling
    * 4090 FIX: apc_rackpdu_power, apc_symmetra, apc_symmetra_input, apc_symmetra_output: some fixes...
    * 4091 FIX: oracle_tablespaces: Werk 3907 broke the detection of UNDO- and TEMP-Tablespaces
    * 4069 FIX: cmciii.phase: Fixed broken check with some devices...
    * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up in case of interface groups
    * 4093 FIX: oracle_tablespaces: Werk 3907 broke the space calculation...
    * 3942 FIX: rstcli: fixed previously failing check, changed check output to provide more information...