@@ -8,4 +8,3 @@ Class: feature
 
 Now you are able to filter by host- resp. service-service-level
 defined in global settings/notifications.
-
